Fix: The top of the side panel in Reports page was hidden under header

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2426,3 +2426,7 @@ ul.MuiList-root.MuiMenu-list.MuiList-dense>div:first-child {
     color: white;
     background-color: transparent;
 }
+
+#viewPanel .ui-panel-inner{
+    margin-top: 4em;
+}
